--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "redux": "^4.2.0",
     "typescript": "^4.4.2",
     "video-react": "^0.15.0",
+    "video.js": "^7.18.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
