--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/video.js": "^7.3.39",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-player": "^2.10.1",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "typescript": "^4.4.2",
-    "video-react": "^0.15.0",
     "video.js": "^7.18.1",
     "web-vitals": "^2.1.0"
   },
